--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -36,16 +36,16 @@
 //				display: none
 // ## fonts 
 // Save fonts to /css/fonts, after that write (eot, woff, ttf):
-// +font(book, cytiapro-black-webfont)  
-// =book
-// 	font-family: "book",arial,sans-serif 
++font(Garamond, garamond)  
+=f
+	font-family: "Garamond", Arial, serif 
 
 $cl: #d7b56d
 	
 body
 	min-width: 1000px
-	font-family: Arial, sans-serif 
-	font-size: 14px 
+	+f
+	font-size: 16px 
 	line-height: 1.4
 a
 	text-decoration: none
@@ -72,9 +72,11 @@ a
 	+box
 .main__welcome
 	text-transform: uppercase
-	font-size: 30px
+	font-size: 32px
+	text-transform: uppercase
 .main__title
-	font-size: 72px
+	font-size: 74px
+	font-style: italic
 .main__title-sub
 	margin-bottom: 30px
 	font-size: 18px
@@ -86,28 +88,48 @@ a
 		border: 3px solid $cl
 		line-height: 34px
 		vertical-align: top
-		color: #fff 
+		font-style: italic
+		color: #FFF 
 
 .header
-	position: absolute
+	position: fixed
 	top: 0
 	left: 0
 	right: 0
+	z-index: 100 
+	&.is-fixed
+		.header__top
+			height: 62px
+		.logo
+			visibility: hidden
+			opacity: 0 
+		.header__links
+			padding-top: 20px
+			li
+				&.is-center
+					visibility: visible
+					opacity: 1 
 .header__top
 	position: relative
 	height: 100px
 	background: #000 
 	background: rgba(0,0,0,.58) 
+	+tr(height .2s linear)
+	overflow: hidden
 .logo
 	position: absolute
 	top: 17px
 	left: 50% 
 	margin-left: -130px
+	visibility: visible
+	+tr(opacity .2s linear)
 	+s(logo)
 .header__links
 	width: 940px
-	padding-top: 60px
+	padding-top: 55px
 	margin: 0 auto
+	text-align: center
+	+tr(padding-top .2s linear)
 	+clr
 	li
 		float: left
@@ -116,6 +138,13 @@ a
 			margin: 0
 		&.is-right
 			float: right
+		&.is-center
+			float: none
+			display: inline-block
+			vertical-align: top
+			visibility: hidden
+			opacity: 0
+			+tr(opacity .2s linear) 
 	a
 		color: #FFF 
 .header__down
@@ -149,7 +178,7 @@ a
 			a
 				color: #9a9a9a 
 	a
-		font-size: 12px
+		font-size: 14px
 		color: #000
 		 
 .page
@@ -164,12 +193,12 @@ a
 	right: 0
 	bottom: 0
 	+cover
-	+transform-style(preserve-3d)
-	+tr(all .3s ease-out)
-	+transform(rotateY(10deg))
+	//+transform-style(preserve-3d)
+	//+tr(all .3s ease-out)
+	//+transform(rotateY(10deg))
 	z-index: 2 
 	&.is-load
-		+transform(rotateY(0deg))
+		//+transform(rotateY(0deg))
 .page__nav
 	position: absolute
 	top: 0
@@ -213,7 +242,7 @@ a
 		display: inline-block
 		padding: 0 30px 0 60px
 		vertical-align: middle
-		font-size: 14px
+		font-size: 16px
 
 .content
 	line-height: 1.6
@@ -221,7 +250,7 @@ a
 .title
 	position: relative
 	padding: 25px 0 
-	font-size: 48px
+	font-size: 50px
 	&:before
 		content: ""
 		position: absolute
@@ -231,9 +260,27 @@ a
 		height: 1px
 		background: #fff  
 
-
-
-
+.text
+	position: relative
+	background: #E9E6D6
+	overflow: hidden
+	&:before
+		content: ""
+		position: absolute
+		top: 50%
+		left: 50%
+		width: 800px
+		height: 800px
+		margin: -400px 0 0 -400px
+		+background-image(radial-gradient(50% 50%, rgba(255,255,255,.7), rgba(255,255,255,0)))
+.text__in	
+	position: relative
+	width: 560px
+	margin: 0 auto
+	padding: 45px 0
+	text-align: center
+	color: #7A6C46 
+	z-index: 2 
 
 
 
