--- a/css/screen.css
+++ b/css/screen.css
@@ -21,7 +21,7 @@ table { border-spacing: 0; border-collapse: collapse; width: 100%; }
 
 @font-face { font-family: Garamond; src: url("fonts/garamond.eot"); src: url("fonts/garamond.eot?#iefix") format("embedded-opentype"), url("fonts/garamond.woff") format("woff"), url("fonts/garamond.ttf") format("truetype"); font-weight: normal; font-style: normal; }
 
-body { min-width: 1000px; font-family: "Garamond", Arial, serif; font-size: 16px; line-height: 1.4; }
+body { min-width: 1000px; font-family: "Prata", Arial, serif; font-size: 14px; line-height: 1.4; }
 
 a { text-decoration: none; }
 
@@ -31,11 +31,11 @@ a { text-decoration: none; }
 
 .main__center { display: table-cell; width: 940px; height: 100vh; padding-top: 200px; vertical-align: middle; text-align: center; color: white; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 
-.main__welcome { text-transform: uppercase; font-size: 32px; text-transform: uppercase; }
+.main__welcome { font-family: "Roboto", Arial, sans-serif; font-size: 30px; font-weight: 400; text-transform: uppercase; }
 
-.main__title { font-size: 74px; font-style: italic; }
+.main__title { font-size: 72px; font-style: italic; }
 
-.main__title-sub { margin-bottom: 30px; font-size: 18px; }
+.main__title-sub { margin-bottom: 30px; font-size: 16px; }
 
 .main__membership a { display: inline-block; width: 152px; height: 34px; border: 3px solid #d7b56d; line-height: 34px; vertical-align: top; font-style: italic; color: white; }
 
@@ -55,7 +55,7 @@ a { text-decoration: none; }
 .header__links li:first-child { margin: 0; }
 .header__links li.is-right { float: right; }
 .header__links li.is-center { float: none; display: inline-block; vertical-align: top; visibility: hidden; opacity: 0; -webkit-transition: opacity 0.2s linear; -moz-transition: opacity 0.2s linear; -o-transition: opacity 0.2s linear; transition: opacity 0.2s linear; }
-.header__links a { color: white; }
+.header__links a { font-family: "Roboto", Arial, sans-serif; font-size: 14px; font-weight: 300; color: white; }
 
 .header__down { background: white; }
 
@@ -66,14 +66,21 @@ a { text-decoration: none; }
 .nav ul, .nav li { float: left; }
 .nav li { margin-left: 30px; }
 .nav li:first-child { margin: 0; }
-.nav li.is-active a { color: #d7b56d; }
-.nav a { color: black; }
+.nav a { color: black; border-bottom: 1px dotted transparent; -webkit-transition: all 0.2s linear; -moz-transition: all 0.2s linear; -o-transition: all 0.2s linear; transition: all 0.2s linear; }
+.nav a:hover { color: #d7b56d; }
+.nav a.is-active { border-bottom: 1px dotted #d7b56d; color: #8b8b8b; }
 
 .lang { float: right; }
 .lang li { float: left; margin-left: 5px; }
 .lang li:first-child { margin: 0; }
 .lang li.is-active a { color: #9a9a9a; }
-.lang a { font-size: 14px; color: black; }
+.lang a { font-size: 12px; color: black; }
+
+.pager { position: fixed; top: 175px; right: 30px; z-index: 100; }
+.pager li { margin-bottom: 8px; }
+.pager a { display: block; width: 10px; height: 10px; border: 3px solid white; border-radius: 50%; -webkit-transition: border-color 0.2s linear; -moz-transition: border-color 0.2s linear; -o-transition: border-color 0.2s linear; transition: border-color 0.2s linear; }
+.pager a:hover { border-color: #d7b56d; }
+.pager a.is-active { border-color: #8b8b8b; }
 
 .page { position: relative; height: 100vh; color: white; -webkit-perspective: 1000px; -moz-perspective: 1000px; -ms-perspective: 1000px; -o-perspective: 1000px; perspective: 1000px; }
 
@@ -82,13 +89,14 @@ a { text-decoration: none; }
 .page__nav { position: absolute; top: 0; left: 0; right: 0; bottom: 0; width: 120px; padding: 120px 40px; background: #6e939c; background: rgba(110, 147, 156, 0.9); z-index: 4; }
 .page__nav li { margin-top: 20px; }
 .page__nav li:first-child { margin: 0; }
-.page__nav a { color: white; }
+.page__nav a { color: white; -webkit-transition: color 0.2s linear; -moz-transition: color 0.2s linear; -o-transition: color 0.2s linear; transition: color 0.2s linear; }
+.page__nav a:hover { color: #b6ecff; }
 
 .page__content { position: absolute; top: 0; left: 200px; bottom: 0; width: 340px; padding: 130px 25px; background: #92c3cf; background: rgba(146, 195, 207, 0.9); z-index: 4; }
 
 .page__content_right { width: 50%; left: 50%; right: 0; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; font-size: 0; }
 .page__content_right:before { content: ""; display: inline-block; width: 0; height: 100%; vertical-align: middle; }
-.page__content_right .page__content-in { display: inline-block; padding: 0 30px 0 60px; vertical-align: middle; font-size: 16px; }
+.page__content_right .page__content-in { display: inline-block; padding: 0 30px 0 60px; vertical-align: middle; font-size: 14px; }
 
 .content { line-height: 1.6; }
 
