--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -238,7 +238,7 @@ a
 	right: 0
 	bottom: 0
 	width: 120px
-	padding: 120px 40px
+	padding: 170px 40px 40px
 	background: #6E939C 
 	background: rgba(110,147,156,.9) 
 	z-index: 4 
@@ -257,7 +257,7 @@ a
 	left: 200px
 	bottom: 0
 	width: 340px
-	padding: 130px 25px  
+	padding: 180px 25px 25px 
 	background: #92c3cf 
 	background: rgba(146,195,207,.9) 
 	z-index: 4 
