--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -227,27 +227,30 @@ a
 	position: relative
 	height: 100vh
 	color: #fff 
-	//+perspective(1000px)
-	&.is-load
+	&.is-active
 		.page__nav
-			+transition-delay(.2s)
 			left: 0
-		.page__bg
-			visibility: visible
-			opacity: 1 
-.page__bg
+			+transition-delay(0s)
+		.page__content
+			width: 390px
+			+transition-delay(.2s)
+.page__bg, .page__bg-img
 	position: absolute
 	top: 0
 	left: 0
 	right: 0
 	bottom: 0
-	+cover
-	visibility: hidden
-	opacity: 0 
-	//+transform-style(preserve-3d)
-	+tr(opacity .2s linear)
-	//+transform(rotateY(10deg))
 	z-index: 2 
+.page__bg
+	+perspective(1000px)
+.page__bg-img
+	+cover
+	//visibility: hidden
+	//opacity: 0 
+	+transform-style(preserve-3d)
+	//+tr(opacity .2s linear)
+	+transform(rotateX(40deg))
+	+transform-origin(100%, 100%)
 .page__nav
 	position: absolute
 	top: 0
@@ -259,6 +262,7 @@ a
 	background: #6E939C 
 	background: rgba(110,147,156,.9) 
 	+tr(left .2s linear)
+	+transition-delay(.2s)
 	z-index: 4 
 	li
 		margin-top: 20px
@@ -268,20 +272,35 @@ a
 		border-bottom: 1px dotted transparent 
 		color: #fff
 		+tr(all .2s linear) 
-		&:hover
+		&:hover, &.is-active
 			border-color: #B6ECFF 
 			color: #B6ECFF 
 .page__content
-	display: none
 	position: absolute
 	top: 0
 	left: 200px
 	bottom: 0
+	width: 0
+	background: #92c3cf 
+	background: rgba(146,195,207,.9)
+	+tr(width .2s linear) 
+	overflow: hidden
+	z-index: 4 
+.page__content-in
+	position: absolute
+	top: 100px
+	left: 0
 	width: 340px
 	padding: 180px 25px 25px 
-	background: #92c3cf 
-	background: rgba(146,195,207,.9) 
-	z-index: 4 
+	visibility: hidden
+	opacity: 0
+	+tr(all .2s linear)
+	&.is-active
+		top: 0
+		visibility: visible
+		opacity: 1 
+
+
 .page__content_right
 	width: 50%
 	left: 50%
