--- a/css/screen.css
+++ b/css/screen.css
@@ -33,7 +33,7 @@ a { text-decoration: none; }
 
 .main__welcome { font-family: "Roboto", Arial, sans-serif; font-size: 30px; font-weight: 400; }
 
-.main__title { font-size: 72px; font-style: italic; }
+.main__title { font-size: 72px; }
 
 .main__title-sub { margin-bottom: 30px; font-size: 16px; }
 
@@ -110,7 +110,7 @@ a { text-decoration: none; }
 .page__content-in.is-active { top: 0; visibility: visible; opacity: 1; }
 .page__content-in .title, .page__content-in .content { position: relative; z-index: 2; }
 
-.page__content-bg { position: absolute; top: 0; left: 0; right: 0; bottom: 0; -webkit-transition: opacity 0.2s linear; -moz-transition: opacity 0.2s linear; -o-transition: opacity 0.2s linear; transition: opacity 0.2s linear; opacity: 0.4; }
+.page__content-bg { position: absolute; top: 0; left: 0; right: 0; bottom: 0; -webkit-transition: opacity 0.2s linear; -moz-transition: opacity 0.2s linear; -o-transition: opacity 0.2s linear; transition: opacity 0.2s linear; opacity: 0.85; }
 
 .page__content_right { width: 50%; left: 50%; right: 0; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; font-size: 0; }
 .page__content_right:before { content: ""; display: inline-block; width: 0; height: 100%; vertical-align: middle; }
