--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -78,7 +78,7 @@ a
 	font-weight: 400 
 .main__title
 	font-size: 72px
-	font-style: italic
+	// font-style: italic
 .main__title-sub
 	margin-bottom: 30px
 	font-size: 16px
@@ -311,7 +311,7 @@ a
 	right: 0
 	bottom: 0
 	+tr(opacity .2s linear)
-	opacity: .4
+	opacity: .85
 
 
 .page__content_right
