fix bg position

--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -257,11 +257,12 @@ a
 .page__nav
 	position: absolute
 	top: 0
+	top: 100px 
 	left: -200px
 	right: 0
 	bottom: 0
 	width: 120px
-	padding: 170px 40px 40px
+	padding: 70px 40px 40px
 	background: #6E939C 
 	background: rgba(110,147,156,.9) 
 	+tr(left .2s linear)
@@ -307,6 +308,7 @@ a
 .page__content-bg
 	position: absolute
 	top: 0
+	top: 100px 
 	left: 0
 	right: 0
 	bottom: 0
