--- a/css/screen.css
+++ b/css/screen.css
@@ -98,7 +98,7 @@ a { text-decoration: none; }
 .page__bg-item { background-repeat: no-repeat; background-size: cover; background-position: 50% 50%; visibility: hidden; opacity: 0; -webkit-transition: opacity 0.2s linear; -moz-transition: opacity 0.2s linear; -o-transition: opacity 0.2s linear; transition: opacity 0.2s linear; }
 .page__bg-item.is-active { visibility: visible; opacity: 1; }
 
-.page__nav { position: absolute; top: 0; left: -200px; right: 0; bottom: 0; width: 120px; padding: 170px 40px 40px; background: #6e939c; background: rgba(110, 147, 156, 0.9); -webkit-transition: left 0.2s linear; -moz-transition: left 0.2s linear; -o-transition: left 0.2s linear; transition: left 0.2s linear; -webkit-transition-delay: 0.2s; -moz-transition-delay: 0.2s; -o-transition-delay: 0.2s; transition-delay: 0.2s; z-index: 4; }
+.page__nav { position: absolute; top: 0; top: 100px; left: -200px; right: 0; bottom: 0; width: 120px; padding: 70px 40px 40px; background: #6e939c; background: rgba(110, 147, 156, 0.9); -webkit-transition: left 0.2s linear; -moz-transition: left 0.2s linear; -o-transition: left 0.2s linear; transition: left 0.2s linear; -webkit-transition-delay: 0.2s; -moz-transition-delay: 0.2s; -o-transition-delay: 0.2s; transition-delay: 0.2s; z-index: 4; }
 .page__nav li { margin-top: 20px; }
 .page__nav li:first-child { margin: 0; }
 .page__nav a { border-bottom: 1px dotted transparent; color: white; -webkit-transition: all 0.2s linear; -moz-transition: all 0.2s linear; -o-transition: all 0.2s linear; transition: all 0.2s linear; }
@@ -110,7 +110,7 @@ a { text-decoration: none; }
 .page__content-in.is-active { top: 0; visibility: visible; opacity: 1; }
 .page__content-in .title, .page__content-in .content { position: relative; z-index: 2; }
 
-.page__content-bg { position: absolute; top: 0; left: 0; right: 0; bottom: 0; -webkit-transition: opacity 0.2s linear; -moz-transition: opacity 0.2s linear; -o-transition: opacity 0.2s linear; transition: opacity 0.2s linear; opacity: 0.85; }
+.page__content-bg { position: absolute; top: 0; top: 100px; left: 0; right: 0; bottom: 0; -webkit-transition: opacity 0.2s linear; -moz-transition: opacity 0.2s linear; -o-transition: opacity 0.2s linear; transition: opacity 0.2s linear; opacity: 0.85; }
 
 .page__content_right { width: 50%; left: 50%; right: 0; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; font-size: 0; }
 .page__content_right:before { content: ""; display: inline-block; width: 0; height: 100%; vertical-align: middle; }
