--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -265,7 +265,7 @@ a
 	padding: 70px 40px 40px
 	background: #6E939C 
 	background: rgba(110,147,156,.9) 
-	+tr(left .2s linear)
+	+tr(all .2s linear)
 	+transition-delay(.2s)
 	z-index: 4 
 	li
