--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -265,7 +265,7 @@ a
 	padding: 70px 40px 40px
 	background: #6E939C 
 	background: rgba(110,147,156,.9) 
-	+tr(all .2s linear)
+	+transition(left .2s linear,background .6s linear)
 	+transition-delay(.2s)
 	z-index: 4 
 	li
@@ -312,7 +312,7 @@ a
 	left: 0
 	right: 0
 	bottom: 0
-	+tr(opacity .2s linear)
+	+transition(opacity .2s linear,background .6s linear)
 	opacity: .9
 
 
