--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -265,6 +265,7 @@ a
 	padding: 70px 40px 40px
 	background: #6E939C 
 	background: rgba(110,147,156,.9) 
+	background: rgba(#3a79a1,.9) 
 	+transition(left .2s linear,background .6s linear)
 	+transition-delay(.2s)
 	z-index: 4 
