--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -283,6 +283,7 @@ a
 .page__content
 	position: absolute
 	top: 0
+	top: 100px 
 	left: 200px
 	bottom: 0
 	width: 0
@@ -309,7 +310,7 @@ a
 .page__content-bg
 	position: absolute
 	top: 0
-	top: 100px 
+	top: 0px 
 	left: 0
 	right: 0
 	bottom: 0
@@ -350,7 +351,10 @@ a
 		width: 20px
 		height: 1px
 		background: #fff  
-
+.centerme,.page__nav ul
+	position: absolute
+	top: 50%
+	margin-top: -100px  
 .text
 	position: relative
 	background: #E9E6D6
