--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -246,6 +246,8 @@ a
 	+transform-style(preserve-3d)
 	+transform(rotateX(40deg))
 	+transform-origin(100%, 100%)
+	a
+		cursor: default
 .page__bg-item
 	+cover
 	visibility: hidden
