--- a/css/screen.css
+++ b/css/screen.css
@@ -94,6 +94,7 @@ a { text-decoration: none; }
 .page__bg { -webkit-perspective: 1000px; -moz-perspective: 1000px; -ms-perspective: 1000px; -o-perspective: 1000px; perspective: 1000px; }
 
 .page__bg-in { -webkit-transform-style: preserve-3d; -moz-transform-style: preserve-3d; -ms-transform-style: preserve-3d; -o-transform-style: preserve-3d; transform-style: preserve-3d; -webkit-transform: rotateX(40deg); -moz-transform: rotateX(40deg); -ms-transform: rotateX(40deg); -o-transform: rotateX(40deg); transform: rotateX(40deg); -webkit-transform-origin: 100% 100%; -moz-transform-origin: 100% 100%; -ms-transform-origin: 100% 100%; -o-transform-origin: 100% 100%; transform-origin: 100% 100%; }
+.page__bg-in a { cursor: default; }
 
 .page__bg-item { background-repeat: no-repeat; background-size: cover; background-position: 50% 50%; visibility: hidden; opacity: 0; -webkit-transition: opacity 0.6s linear; -moz-transition: opacity 0.6s linear; -o-transition: opacity 0.6s linear; transition: opacity 0.6s linear; }
 .page__bg-item.is-active { visibility: visible; opacity: 1; }
