--- a/css/screen.css
+++ b/css/screen.css
@@ -26,10 +26,12 @@ body { min-width: 1000px; font-family: "Prata", Arial, serif; font-size: 14px; l
 a { text-decoration: none; }
 
 .main { position: relative; height: 100vh; min-height: 600px; background: url(../img/main.jpg); background-repeat: no-repeat; background-size: cover; background-position: 50% 50%; }
+@media screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-device-pixel-ratio: 2) { .main { height: 100%; } }
 
 .main__in { width: 940px; margin: 0 auto; }
 
 .main__center { display: table-cell; width: 940px; height: 100vh; padding-top: 200px; vertical-align: middle; text-align: center; color: white; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+@media screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-device-pixel-ratio: 2) { .main__center { height: 100%; } }
 
 .main__welcome { font-family: "Roboto", Arial, sans-serif; font-size: 30px; font-weight: 400; }
 
@@ -86,6 +88,7 @@ a { text-decoration: none; }
 .preloader { position: absolute; top: 50%; left: 50%; width: 50px; height: 50px; margin: -25px 0 0 -25px; background: url(../img/preloader.gif); }
 
 .page { position: relative; height: 100vh; color: white; }
+@media screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-device-pixel-ratio: 2) { .page { height: 100%; } }
 .page.is-active .page__nav { left: 0; -webkit-transition-delay: 0s; -moz-transition-delay: 0s; -o-transition-delay: 0s; transition-delay: 0s; }
 .page.is-active .page__content { width: 390px; -webkit-transition-delay: 0.2s; -moz-transition-delay: 0.2s; -o-transition-delay: 0.2s; transition-delay: 0.2s; }
 
