--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -60,6 +60,8 @@ a
 	min-height: 600px 
 	background: url(../img/main.jpg)
 	+cover 
+	+ipad-retina
+		height: 100% 
 .main__in
 	width: 940px
 	margin: 0 auto
@@ -72,6 +74,8 @@ a
 	text-align: center
 	color: #fff 
 	+box
+	+ipad-retina
+		height: 100% 
 .main__welcome
 	+fr
 	font-size: 30px
@@ -226,6 +230,8 @@ a
 	position: relative
 	height: 100vh
 	color: #fff 
+	+ipad-retina
+		height: 100% 
 	&.is-active
 		.page__nav
 			left: 0
