--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -49,6 +49,13 @@ body
 	+f
 	font-size: 14px 
 	line-height: 1.4
+	overflow: hidden
+	+ipad
+		overflow: auto
+	+ipad-retina
+		overflow: auto
+	+iphone
+		overflow: auto
 a
 	text-decoration: none
 
